# fringe-retro-kit

./: .gitignore  ARCHITECTURE.md  COMMANDS.md  Cargo.toml  LICENSE  PHASE-1-ULTIMA-I.md  PHASE-5-SAVE-LIBRARY.md  README.md  ROADMAP-history.md  ROADMAP.md  config.example.toml  justfile  resources.toml  templates.example.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: compare.rs  config.rs  detect.rs  edit.rs  inspect.rs  library.rs  main.rs  resources.rs  templates.rs  tui.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: backup.rs  diff.rs  lib.rs  save.rs  scan.rs  schema.rs
crates/core/src/codec/: checksum.rs  exepack.rs  huffman.rs  mod.rs  nrbf.rs  strings.rs  strings5.rs  xor.rs
crates/core/src/games/: bardstale.rs  mod.rs  ultima1.rs  ultima2.rs  ultima3.rs  ultima4.rs  ultima5.rs  ultima6.rs  wasteland.rs
crates/kit/: Cargo.toml
crates/kit/src/: carver.rs  explorer.rs  main.rs  ripper.rs  util.rs  watchdog.rs  workbench.rs
crates/kit/tests/: cli.rs
crates/map/: Cargo.toml
crates/map/src/: bundle.rs  cga.rs  config.rs  dungeon.rs  ega.rs  huffman.rs  lzw.rs  main.rs  serve.rs  tilemap.rs  ultima1.rs  ultima2.rs  ultima3.rs  ultima4.rs  ultima5.rs  ultima6.rs  wasteland.rs
crates/map/src/web/: viewer.html
docs/: templates.md
docs/commands/: fringe-retro-kit.md  fringe-retro-map.md  fringe-retro.md
docs/formats/: README.md  bardstale.md  ultima1.md  ultima2.md  ultima3.md  ultima4.md  ultima5.md  ultima6.md  wasteland.md
packaging/: install.sh
packaging/homebrew/: fringe-retro.rb  update_formula.py
tests/fixtures/local/: .gitkeep
