[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["John Sheets <john@fourfringe.com>"]
repository = "https://github.com/FourFringe/fringe-retro-kit"

[workspace.dependencies]
# Internal
fringe-retro-core = { path = "crates/core" }

# Shared third-party crates (all MIT or MIT/Apache-2.0).
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
open = "5" # Open URLs/files in the OS default handler; MIT.
ratatui = "0.29" # Terminal UI (bundles crossterm); MIT.
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
toml = "0.8"
