[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/map"]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["John Sheets <john@fourfringe.com>"]
repository = "https://github.com/FourFringe/fringe-retro-kit"

# Smaller, cleaner release binaries (used by the Release workflow).
[profile.release]
strip = true

[workspace.dependencies]
# Internal
fringe-retro-core = { path = "crates/core" }

# Shared third-party crates (all MIT or MIT/Apache-2.0).
anyhow = "1"
assert_cmd = "2" # CLI integration testing (dev-only); MIT/Apache-2.0.
async-stream = "0.3" # Ergonomic async stream construction for SSE; MIT.
axum = "0.8" # Local map-browser web server; MIT.
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3" # `Stream` trait for SSE responses; MIT/Apache-2.0.
image = { version = "0.25", default-features = false, features = ["png"] } # PNG encode for map export; MIT/Apache-2.0.
notify = "6" # Filesystem watching for the live map position; CC0-1.0/Artistic-2.0.
open = "5" # Open URLs/files in the OS default handler; MIT.
predicates = "3" # Assertions for CLI output (dev-only); MIT/Apache-2.0.
ratatui = "0.29" # Terminal UI (bundles crossterm); MIT.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] } # Async runtime for the map server; MIT.
toml = "0.8"
tower-http = { version = "0.6", features = ["fs"] } # Static file serving (ServeDir) for map tiles; MIT.
