[package]
name = "fringe-retro-cli"
description = "Command-line interface for Fringe Retro Kit."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "fringe-retro"
path = "src/main.rs"

[dependencies]
fringe-retro-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
open.workspace = true
ratatui.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
