[package]
name = "fringe-retro-core"
description = "Core engine for Fringe Retro Kit: save-file parsing, editing, and backups."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
tempfile = { workspace = true }
thiserror.workspace = true
