[package]
name = "fringe-retro-map"
description = "Map exporter for Fringe Retro Kit: bakes classic-game world maps into web tiles."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "fringe-retro-map"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
clap.workspace = true
fringe-retro-core.workspace = true
futures-core.workspace = true
image.workspace = true
notify.workspace = true
open.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile.workspace = true
